z-index fix

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -431,7 +431,7 @@ ul {
   height: 1px;
   margin-bottom: -1px;
   overflow: visible;
-  z-index: 10;
+  z-index: 20;
   margin-right: -16px;
   @media (max-width: $tablet) {
     margin-right: 8px;
